todo-app/manifests/k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  labels:
    app: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      nodeSelector:
        kubernetes.io/hostname: k3d-k3s-default-agent-0   # same as PV
      volumes:
        - name: images-pv
          persistentVolumeClaim:
            claimName: todo-images-pvc
      containers:
        - name: todo-app
          image: todo-app:1.4             # bump your tag
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: images-pv
              mountPath: /data
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
