todo-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
  labels:
    app: todo-app
spec:
  selector:
    app: todo-app
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
